<resources>
    <string name="app_name">community</string>

    <!--讯飞 app_id -->
    <string name="app_id">604ffe6e</string>

    <!--BottomNavigationView 的菜单内容  -->
    <string name="menu_distinguish">识别</string>
    <string name="menu_contact">社交</string>
    <string name="menu_discover">发现</string>
    <string name="menu_mine">我的</string>

    <!--分割线 ======================================================== -->
    <!-- 登陆注册字符串信息 -->
    <string name="login">登录</string>
    <string name="username">用户名 (邮箱/电话/账号名称)</string>
    <string name="password">密码</string>
    <string name="password_again_text">再次输入密码</string>

    <string name="email">邮箱地址 E-mail Address</string>
    <string name="phone">手机号码</string>
    <string name="name">用户名</string>
    <string name="sign_up">注册</string>

    <string name="check_code_text">验证码</string>
    <string name="check_code_tip_text">获取验证码</string>

    <string name="forgot_pass">忘记密码?</string>

    <string name="google_login">微信登录</string>
    <string name="fb_login">QQ登录</string>
    <string name="pass_text">跳过</string>

    <!--分割线 ======================================================== -->

    <!--个人信息Fragment页面的字符串-->
    <string name="fragment_my_feed">帖子</string>
    <string name="fragment_my_comment">评论</string>
    <string name="fragment_my_favorite">收藏</string>
    <string name="fragment_my_history">观看历史</string>
    <string name="fragment_my_message">消息中心</string>
    <string name="fragment_my_contacts">通讯录</string>
    <string name="fragment_my_setting">设置中心</string>
    <string name="description">description</string>

    <!--ImageView描述 待办，待补充-->
    <string name="TODO">描述待补充，盲人模式</string>

    <!--personInfo Fragment页面字符串内容-->
    <string name="person_info_title">我的资料</string>
    <string name="person_info_username_tip">昵称</string>
    <string name="person_info_username">老八蜜汁汉堡</string>
    <string name="person_info_username_change_tip">修改</string>
    <string name="person_info_sex">保密</string>
    <string name="person_info_sex_tip">性别</string>
    <string name="person_info_sex_change_tip">设置</string>
    <string name="person_info_birthday">1999年5月2日</string>
    <string name="person_info_birthday_tip">生日</string>
    <string name="person_sole_number">20182131039</string>
    <string name="person_info_description">莂嫌棄一直婄伱の亽，莂婄一直嫌棄伱の亽。</string>
    <string name="person_info_description_tip">签名</string>
    <string name="person_info_description_change_tip">修改</string>
    <string name="person_info_phone_number">13000000000</string>
    <string name="person_info_phone_number_tip">手机号</string>
    <string name="person_info_phone_number_change_tip">修改绑定</string>
    <string name="person_info_other_account_tip">社交账号绑定</string>
    <string name="person_info_email">13000000000@163.com</string>
    <string name="person_info_email_tip">邮箱</string>
    <string name="person_info_email_change_tip">修改绑定</string>
    <string name="finish_text">完成</string>

    <!--更换昵称 Fragment页面 字符串内容-->
    <string name="change_name_title">更换昵称</string>
    <string name="change_name_hint_text">请输入新的昵称</string>
    <string name="change_name_tip_text">好名字可以让你的朋友更容易记住你</string>

    <!--menu 菜单字符串-->
    <string name="bar_menu_history_video_clear_text">清除</string>

    <!--Recommend item 字符串内容-->
    <string name="see_number_text">%d 人围观</string>

    <!--activity_chat.xml字符串内容-->
    <string name="fragment_practice_instant">Instant</string>
    <string name="instant_message_input_hint">input message</string>
    <string name="instant_message_send">Send</string>

    <!--社交账号绑定页面 字符串数据-->
    <string name="fragment_bind_social_account_tip_one">账号绑定登录社区</string>
    <string name="fragment_bind_social_account_tip_two">出于安全因素，你至少需要保留一种登录方式</string>
    <string name="fragment_bind_social_account_tip_phone">130****0000</string>
    <string name="fragment_bind_social_account_tip_no_binding">未绑定</string>
    <string name="fragment_bind_social_account_tip_wechat">锐</string>

    <!--CommentActivity页面的字符串-->
    <string name="comment_detail_hint">友善的皮才是真的皮</string>
    <string name="comment_detail_praise">赞</string>
    <string name="comment_detail_collect">收藏</string>
    <string name="share">分享</string>
    <string name="author"> 作者 </string>
    <string name="comment_time">2021/03/31</string>
    <string name="comment_like_count">20</string>

    <!--item fans 页面字符串内容-->
    <string name="item_fans_name">迟小到不迟到</string>
    <string name="item_fans_follow_tip">+  关注</string>
    <string name="item_fans_follow_each_other_tip">互相关注</string>
    <string name="item_follow_list_follow_tip">已关注</string>

    <!--更换性别 Fragment页面 字符串内容-->
    <string name="change_sex_title">更换性别</string>
    <string name="change_sex_male">\  男</string>
    <string name="change_sex_female">\  女</string>
    <string name="change_sex_secret">保密</string>

    <!--更换签名 Fragment页面 字符串内容-->
    <string name="change_description">更改签名</string>
    <string name="change_description_hint_text">请输入你的签名</string>
    <string name="change_description_tip_text">好签名更能彰显你的个性</string>

    <!--更换手机号 Fragment页面 字符串内容-->
    <string name="change_Phone">更改手机号</string>
    <string name="change_Phone_hint_text">请输入你的手机号码</string>

    <!--更换邮箱 Fragment页面 字符串内容-->
    <string name="change_Email">更改邮箱</string>
    <string name="change_Email_hint_text">请输入你的邮箱</string>

    <!-- 语言 -->
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>en_us</item>
    </string-array>

    <!-- 标点符号 -->
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <!-- 听写 -->
    <string name="text_begin">请开始说话&#8230;</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>

    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!--toolbar_post_articles组件字符串内容-->
    <string name="toolbar_post_articles_cancel_text">取消</string>
    <string name="toolbar_post_articles_post_text">发贴</string>
    <string name="toolbar_post_articles_send_post_text">发送</string>
    <string name="toolbar_post_articles_username">用户名</string>

    <string name="activity_post_articles_share_hint_text">分享新鲜事…</string>
    <string name="activity_post_articles_location_text">显示位置</string>
    <string name="activity_post_articles_public_text">公开</string>

    <!--toolbar_settings 字符串内容-->
    <string name="toolbar_settings_setting_text">设置</string>

    <!--fragment_setting 页面字符串内容-->
    <string name="fragment_setting_account_manger_text">帐号管理</string>
    <string name="fragment_setting_notice_text">通知</string>
    <string name="fragment_setting_private_safety_text">隐私与安全</string>
    <string name="fragment_setting_common_setting_text">通用设置</string>
    <string name="fragment_setting_feedback_text">意见反馈</string>
    <string name="fragment_setting_about_text">关于</string>
    <string name="fragment_setting_clean_cache_text">清理缓存</string>
    <string name="fragment_setting_login_out_text">退出</string>



</resources>