<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="commonHandler"
            type="com.dawn.community.binding_handler.CommonHandler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/top_bar_bg">

        <TextView
            android:id="@+id/idea_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:onClick="()"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/toolbar_post_articles_cancel_text"
            android:textColor="@color/cancel_text"
            android:textSize="16sp"
            android:focusable="true"
            tools:ignore="RelativeOverlap" />

        <LinearLayout
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/compose_toolbar_folder_name_auto"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:focusable="true">

            <TextView
                android:id="@+id/inputType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_post_articles_post_text"
                android:textColor="@color/middle_send_text"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/idea_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_post_articles_username"
                android:textColor="@color/middle_username_text"
                android:textSize="12sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/idea_send"
            android:layout_width="48dp"
            android:layout_height="31dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:background="@drawable/normal_send_button_bg"
            android:gravity="center"
            android:text="@string/toolbar_post_articles_send_post_text"
            android:textColor="@color/normal_send_button_text"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/top_bar_bottom_drive" />
    </RelativeLayout>
</layout>