<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_10">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/author_avatar"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:src="@drawable/naeun_2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_16"
            android:textColor="@color/color_000"
            android:textSize="@dimen/sp_12"
            app:layout_constraintLeft_toRightOf="@+id/author_avatar"
            app:layout_constraintTop_toTopOf="parent"
            android:text="神秘的jetpack"/>

        <TextView
            android:id="@+id/label_author"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_16"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/author"
            android:textSize="@dimen/font_size_10"
            android:background="@drawable/textview_author"
            android:textColor="@color/color_white"
            app:layout_constraintLeft_toRightOf="@+id/author_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/create_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/comment_time"
            android:textColor="@color/color_999"
            android:textSize="@dimen/font_size_10"
            app:layout_constraintBaseline_toBaselineOf="@+id/author_name"
            app:layout_constraintLeft_toRightOf="@+id/label_author"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="12天前" />

        <TextView
            android:id="@+id/comment_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="16dp"
            android:drawableEnd="@drawable/icon_cell_liked"
            android:drawablePadding="@dimen/dp_3"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:text="@string/comment_like_count"
            android:textColor="@color/color_999"
            android:textSize="@dimen/sp_10"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:drawableRight="@drawable/icon_cell_liked_large"
            tools:text="1000" />

        <ImageView
            android:id="@+id/comment_delete"
            android:layout_width="@dimen/dp_14"
            android:layout_height="@dimen/dp_14"
            android:layout_marginEnd="@dimen/dp_10"
            android:src="@drawable/icon_item_cell_delete"
            app:layout_constraintBottom_toBottomOf="@id/comment_like"
            app:layout_constraintRight_toLeftOf="@+id/comment_like"
            app:layout_constraintTop_toTopOf="@id/comment_like"
            android:contentDescription="@string/TODO" />

        <TextView
            android:id="@+id/comment_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:text="@string/comment_detail_hint"
            android:textColor="@color/color_333"
            android:textSize="@dimen/sp_14"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/author_avatar"
            app:layout_constraintRight_toLeftOf="@+id/comment_like"
            app:layout_constraintTop_toBottomOf="@+id/author_name"
            tools:text="comment.commentText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>