<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_bind_account"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:titleTextColor="@color/black0"
            app:title="社交账号绑定"
            app:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_bind_social_account_tip_one"
            android:textColor="#B38678"
            android:layout_marginStart="@dimen/dp_15"
            android:textSize="@dimen/font_size_14"
            android:layout_marginTop="@dimen/dp_10"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_bind_social_account_tip_two"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_15"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_10">

            <ImageView
                android:id="@+id/phone_picture"
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_35"
                android:src="@drawable/phone_active_256px"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_18"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_bind_social_account_tip_phone"
                android:layout_toEndOf="@id/phone_picture"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_20"
                android:textSize="@dimen/font_size_16"
                android:textColor="@color/black0"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray5"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_10">

            <ImageView
                android:id="@+id/weibo_picture"
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_35"
                android:src="@drawable/weibo_256px"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_18"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_bind_social_account_tip_no_binding"
                android:layout_toEndOf="@id/weibo_picture"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_20"
                android:textSize="@dimen/font_size_16"
                android:textColor="@color/wechat_gray_2"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray5"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_10">

            <ImageView
                android:id="@+id/wechat_picture"
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_35"
                android:src="@mipmap/wechat_active_256px"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_18"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_bind_social_account_tip_wechat"
                android:layout_toEndOf="@id/wechat_picture"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_20"
                android:textSize="@dimen/font_size_16"
                android:textColor="@color/black0"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray5"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_10">

            <ImageView
                android:id="@+id/qq_picture"
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_35"
                android:src="@drawable/qq_256px"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_18"
                android:contentDescription="@string/TODO" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_bind_social_account_tip_no_binding"
                android:layout_toEndOf="@id/qq_picture"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_20"
                android:textSize="@dimen/font_size_16"
                android:textColor="@color/wechat_gray_2"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray5"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"/>

    </LinearLayout>

</layout>