<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="itemData"
            type="com.dawn.community.bean.FollowMessageItem" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:background="@android:color/white">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/follow_image"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            imageUrl="@{itemData.userImage}"
            tools:src="@drawable/naeun_2"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_25"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/follow_image"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_toStartOf="@id/follow_tip">

            <TextView
                android:id="@+id/follow_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{itemData.userName}"
                tools:text="@string/item_fans_name"
                android:textSize="@dimen/font_size_14"
                android:textColor="@color/black0"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@{itemData.des}"
                tools:text="@string/comment_detail_hint"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:textSize="@dimen/font_size_12"/>

        </LinearLayout>

        <TextView
            android:id="@+id/follow_tip"
            style="@style/DynamicBase.Label"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_30"
            android:gravity="center"
            android:text="@string/item_follow_list_follow_tip"
            tools:textColor="@color/gray3"
            android:textColor="@color/gray3"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_5"
            android:background="@drawable/textview_rim_gray"
            />

    </RelativeLayout>

</layout>